--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
         <form action="./response.php" method="post" enctype="multipart/form-data">
             <h1>Fill this form!</h1>
 
-            <!-- <label>Enter your first name</label>
+            <label>Enter your first name</label>
             <input type="text" name="first_name" required>
 
             <label>Enter your last name</label>
             <input type="text" name="last_name" required>
 
             <label>Your Fullname</label>
-            <input type="text" name="full_name" disabled required> -->
+            <input type="text" name="full_name" disabled required>
 
-            <!-- <label>Upload an Image</label>
-            <input class="picture-input" type="file" name="image" id="image" accept="image/*"> -->
+            <label>Upload an Image</label>
+            <input class="picture-input" type="file" name="image" id="image" accept="image/*">
 
             <label>Enter your Subjects and Marks</label>
             <textarea placeholder="Please use the following format: English|80" name="result" id="result"></textarea>
