Completed assignment 3, 4 and 5

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <form action="./response.php" method="post" enctype="multipart/form-data">
             <h1>Fill this form!</h1>
 
-            <label>Enter your first name</label>
+            <!-- <label>Enter your first name</label>
             <input type="text" name="first_name" required>
 
             <label>Enter your last name</label>
@@ -29,7 +29,13 @@
             <input class="picture-input" type="file" name="image" id="image" accept="image/*">
 
             <label>Enter your Subjects and Marks</label>
-            <textarea placeholder="Please use the following format: English|80" name="result" id="result"></textarea>
+            <textarea placeholder="Please use the following format: English|80" name="result" id="result"></textarea> -->
+
+            <!-- <label>Enter your mobile number</label>
+            <input type="text" name="number" required maxlength="10"> -->
+
+            <label>Enter your Email Id</label>
+            <input type="text" name="email" required>
 
             <button type="submit">Submit</button>
         </form>
