--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <textarea placeholder="Please use the following format: English|80" name="result" id="result"></textarea>
 
             <label>Enter your mobile number</label>
-            <input type="text" name="number" required maxlength="10">
+            <input type="text" name="number" maxlength="10" required>
 
             <label>Enter your Email Id</label>
             <input type="text" name="email" required>
