Added comments for classes & functions and implemented OOP concepts for generating PDF as per the feedback

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <input type="text" name="full_name" disabled required>
 
             <label>Upload an Image</label>
-            <input class="picture-input" type="file" name="image" id="image" accept="image/*">
+            <input class="picture-input" type="file" name="image" id="image" accept="image/*" required>
 
             <label>Enter your Subjects and Marks</label>
-            <textarea placeholder="Please use the following format: English|80" name="result" id="result"></textarea>
+            <textarea placeholder="Please use the following format: English|80" name="result" id="result" required></textarea>
 
             <label>Enter your mobile number</label>
             <input type="text" name="number" maxlength="10" required>
